--- a/catalog/Jenkinsfile
+++ b/catalog/Jenkinsfile
@@ -65,7 +65,7 @@ podTemplate(
                 curl -kLo cloudctl https://10.10.1.10:8443/api/cli/cloudctl-linux-amd64
                 curl -kLo helm.tgz https://10.10.1.10:8443/api/cli/helm-linux-amd64.tar.gz
                 tar -xzf helm.tgz
-
+                ./linux-amd64/helm init --client-only
                 chmod a+x cloudctl
                 ./cloudctl login -a https://10.10.1.10:8443 -u \${DOCKER_USER} -p \${DOCKER_PASSWORD} -n default
 
